Fix on sponsors * removed unpublished ones * fix on dark mode on detail page

--- a/src/styles/sponsor-page.module.scss
+++ b/src/styles/sponsor-page.module.scss
@@ -89,7 +89,7 @@
           align-self: flex-end;
 
           .link {
-            color: var(--color_text_light);
+            color: var(--color_text_dark);
 
             i {
               font-size: 2.5rem;
@@ -308,7 +308,7 @@
 
 .bottom-bar {
   background-color: var(--color_secondary_contrast);
-  color: var(--color_text_light);
+  color: var(--color_text_dark);
   font-size: 30px;
   padding: 6px 10px;
   position: relative;
@@ -354,7 +354,7 @@
 
   .container-text {
     font-size: 32px;
-    color: var(--color_text_light);
+    color: var(--color_text_dark);
   }
 
   .container-buttons {
@@ -462,7 +462,7 @@
             flex-direction: column;
 
             .link {
-              color: var(--color_text_light);
+              color: var(--color_text_dark);
 
               i {
                 font-size: 2.5rem;
